--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ remote_theme:       TaylanTatli/Moon
 
 # Site
 title:              Jeongmin's blog
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+bio:                ''
+description:        "조정민의 블로그에 오신 것을 환영합니다."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
@@ -39,20 +39,20 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
-facebook:           username
-github-url:         username
+email:              qll4359@naver.com
+#twitter:           username
+facebook:           https://www.facebook.com/profile.php?id=100012240100710
+github-url:         https://github.com/jeongm1n
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+instagram:          https://www.instagram.com/wjdals4_6/?hl=ko
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:             username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
