--- a/_config.yml
+++ b/_config.yml
@@ -41,12 +41,12 @@ disqus_shortname:   taylantatli
 #bing-verify:
 email:              qll4359@naver.com
 #twitter:           username
-facebook:           https://www.facebook.com/profile.php?id=100012240100710
+facebook:           profile.php?id=100012240100710
 github-url:         https://github.com/jeongm1n
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          https://www.instagram.com/wjdals4_6/?hl=ko
+instagram:          wjdals4_6/?hl=ko
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
