--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,6 @@ tiled_bg:           false   # Set this true if you want to tile your background 
 locale:             en_US
 url:                https://Jeongm1n.github.io
 
-# disqus
-disqus_url : qll4359@naver.com
-disqus_id : Jeongm1n
-
 # Jekyll
 permalink:          /:title/
 markdown:           kramdown
@@ -31,7 +27,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   Jeongm1n
 
 # Social
 # if you don't have any of social below, comment the line.
