--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   
+disqus_url:        qll4359@naver.com
+disqus_id:         Jeongm1n
 
 # Social
 # if you don't have any of social below, comment the line.
