--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname: jeongm1n-github-io
+disqus_shortname: https-jeongm1n-github-io
 
 # Social
 # if you don't have any of social below, comment the line.
