--- a/_config.yml
+++ b/_config.yml
@@ -74,4 +74,4 @@ jekyll-mentions:
     base_url: 
 
 # Exclude list
-exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
+exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, disqus_comments.html]
