--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,30 @@
-remote_theme:       TaylanTatli/Moon
+remote_theme: TaylanTatli/Moon
 
 # Site
-title:              Jeongmin's blog
-description:        "조정민의 블로그에 오신 것을 환영합니다."
-reading_time:       true
-words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
-tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             en_US
-url:                https://Jeongm1n.github.io
+title: Jeongmin's blog
+description: "조정민의 블로그에 오신 것을 환영합니다."
+reading_time: true
+words_per_minute: 200
+logo: "assets/img/logo.png"
+background: "assets/img/placeholder-big.jpg"
+tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
+locale: en_US
+url: https://Jeongm1n.github.io
 
 # Jekyll
-permalink:          /:title/
-markdown:           kramdown
-highlighter:        rouge
+permalink: /:title/
+markdown: kramdown
+highlighter: rouge
 kramdown:
-  auto_ids:         true
-  footnote_nr:      1
-  entity_output:    as_char
-  toc_levels:       1..6
-  enable_coderay:   false
-mathjax:            true
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  enable_coderay: false
+mathjax: true
 sass:
-  sass_dir:         _sass
-  style:            compressed
+  sass_dir: _sass
+  style: compressed
 
 # Comments
 disqus_shortname: https-jeongm1n-github-io
@@ -32,20 +32,20 @@ disqus_shortname: https-jeongm1n-github-io
 # Social
 # if you don't have any of social below, comment the line.
 #google:
-  #plus:            #username
-  #analytics:
-  #verify:
-  #ad-client:
-  #ad-slot:
+#plus:            #username
+#analytics:
+#verify:
+#ad-client:
+#ad-slot:
 #bing-verify:
-email:              qll4359@naver.com
+email: qll4359@gmail.com
 #twitter:           username
-facebook:           profile.php?id=100012240100710
-github-url:         jeongm1n
+facebook: profile.php?id=100012240100710
+github-url: jeongm1n
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          wjdals4_6/?hl=ko
+instagram: wjdals4_6/?hl=ko
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
@@ -71,7 +71,22 @@ gems:
   - jekyll-gist
 
 jekyll-mentions:
-    base_url: 
+  base_url:
 
 # Exclude list
-exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, disqus_comments.html]
+exclude:
+  [
+    README.md,
+    Gemfile,
+    Gemfile.lock,
+    node_modules,
+    gulpfile.js,
+    package.json,
+    _site,
+    src,
+    vendor,
+    CNAME,
+    LICENSE,
+    Rakefile,
+    disqus_comments.html,
+  ]
