--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@ sass:
   style: compressed # expanded
 
 # SEO settings
-title: end2end
+title: Jeongmin's blog
 description: "A free Jekyll theme for download"
 keywords: "Jekyll, theme, free, download, SEO, blog, web"
-url: http://nandomoreira.me
-baseurl: "/end2end"
+url: https://Jeongm1n.github.io
+baseurl:
 
 google_analytics: UA-52446115-1
 repo: http://github.com/nandomoreirame/end2end
-disqus_shortname: "nandothemes"
-disqus_site_shortname: "nandothemes"
+disqus_shortname: "https-jeongm1n-github-io"
+disqus_site_shortname: ""
 
 # Author settings
 author:
@@ -35,12 +35,12 @@ author:
   job: Frontend Engineer
   bio: "Enthusiast performance, responsive design and usability, always looking for the best project and good coffee."
   thumb: /images/author.jpg
-  email: nandomoreira.me@gmail.com
-  url: https://nandomoreira.me/
-  github: https://github.com/nandomoreirame
-  twitter: https://twitter.com/umdevux
-  facebook: https://facebook.com/umdevux
-  linkedin: https://linkedin.com/in/nandomoreirame
+  email: qll4359@gmail.com
+  url: https://Jeongm1n.github.io
+  github: Jeongm1n
+  #twitter:
+  facebook: profile.php?id=100012240100710
+  #linkedin: https://linkedin.com/in/nandomoreirame
 
 # navbar pages
 navbar:
@@ -51,4 +51,13 @@ navbar:
   - slug: blog
     title: Blog
 
-exclude: ["config.rb", "src", "Gemfile", "Gemfile.lock", "package.json","README.md", "Rakefile"]
+exclude:
+  [
+    "config.rb",
+    "src",
+    "Gemfile",
+    "Gemfile.lock",
+    "package.json",
+    "README.md",
+    "Rakefile",
+  ]
