[POST] Update 2020-12-17-post.md

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ description: "조정민의 블로그에 오신 것을 환영합니다."
 avatar: profile.png
 email: qll4359@email.com
 github: Jeongm1n # username
+insta: wjdals4_6/?hl=ko
 #twitter: username
 #linkedin: username
 #stackoverflow: username   #e.g: users/2735833/proton1h1
